# sportlocker

./: .dockerignore  .env.example  .env.production.example  .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.json
.claude/agents/: account-executive.md  advisor.md  agency-geo.md  agency-legal.md  agency-marketing.md  agency-reputation.md  agency-sales.md  ai-engineer.md  ai-workflow-designer.md  analyst.md  analytics-reporter.md  api-documenter.md  api-route-builder.md  api-tester.md  architect-review.md  architect.md  automation-architect.md  backend-architect.md  backend-reliability-engineer.md  cloud-architect.md  code-analyzer-debugger.md  code-reviewer.md  code-simplifier.md  competitive-intelligence.md  compliance-officer.md  config-safety-reviewer.md  cost-optimizer.md  critic.md  customer-success-manager.md  customer-support.md  data-engineer.md  data-scientist.md  database-admin.md  database-optimizer.md  debugger.md  (+98 more)
.github/: dependabot.yml
database/: README.md  schema.sql
docs/: ARCHITECTURE.md  CDC.md  MANUEL_OPERATEUR.html  MANUEL_OPERATEUR.md  ONBOARDING-TENANT.md  RGPD.md  RUNBOOK.md  SECURITY.md  cdn-vitrine.md
scripts/: e2e-firmware-sim.sh  forge-admin-token.mjs  preflight.sh
services/firmware/: .gitignore  BENCH_TEST.md  Dockerfile  Dockerfile.sim  IMPLANTATION.html  IMPLANTATION.md  Makefile  README.md  pyproject.toml  railway.json  requirements.txt  setup_pi.sh
services/firmware/src/: config.py  heartbeat.py  locker_controller.py  main.py  mqtt_client.py  qr_reader.py
services/firmware/src/sportlocker_firmware/: __init__.py  __main__.py  agent.py  config.py  heartbeat.py  jwt_verify.py  locker_ctrl.py  mqtt_client.py  nonce_store.py  qr_reader.py  sentry_init.py  state_machine.py
services/firmware/src/sportlocker_firmware/tools/: __init__.py  demo_unlock.py  local_scan.py
services/firmware/tests/: conftest.py  test_agent.py  test_config.py  test_demo_unlock.py  test_heartbeat.py  test_jwt_verify.py  test_local_scan.py  test_locker_ctrl.py  test_mqtt_client.py  test_nonce_store.py  test_qr_reader.py  test_sentry_init.py  test_state_machine.py
(+523 files in other folders)
