[project]
name = "sportlocker-firmware"
version = "0.1.0"
description = "Agent IoT embarqué SportLocker (Raspberry Pi CM4)"
requires-python = ">=3.11"
dependencies = [
  "paho-mqtt>=2.1.0",
  "opencv-python>=4.10.0",
  "pyzbar>=0.1.9",
  "python-jose[cryptography]>=3.3.0",
  "llrpy>=0.5.0",
  "pydantic>=2.7.0",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
